# juagomezro.github.io

./: Prueba_matlab.m  README.md
Archivos/: Prueba_Control_Matlab.mlx
src/camera_node/: package.xml  setup.py
src/camera_node/camera_node/: camera_node.py
src/cinematica_node/cinematica_node/: cinematica_node.py
src/control_node/: package.xml  setup.py
src/control_node/control_node/: control_node.py
src/gripper_node/: package.xml  setup.py
src/gripper_node/gripper_node/: gripper_node.py
src/gui_node/gui_node/: gui_client.py
src/hexapod_interfaces/: CMakeLists.txt
src/hexapod_interfaces/msg/: Objeto.msg
src/hexapod_interfaces/srv/: ObtenerPoseRobot.srv
src/matlab_msg_gen/glnxa64/src/: VersionInfo.mat
src/matlab_msg_gen/glnxa64/src/hexapod_interfaces/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
src/matlab_msg_gen/glnxa64/src/hexapod_interfaces/action/: EnviarPaso.action
src/matlab_msg_gen/glnxa64/src/hexapod_interfaces/include/hexapod_interfaces/: visibility_control.h
src/matlab_msg_gen/glnxa64/src/hexapod_interfaces/m/+ros/+internal/+ros2/+custommessages/+hexapod_interfaces/: activarRequest.m  activarResponse.m  calcularFeedback.m  calcularGoal.m  calcularResult.m  capturarImagenRequest.m  capturarImagenResponse.m  enviarPasoFeedback.m  enviarPasoGoal.m  enviarPasoResult.m  objeto.m  obtenerObjetosRequest.m  obtenerObjetosResponse.m  obtenerPoseRobotRequest.m  obtenerPoseRobotResponse.m  posicionarFeedback.m  posicionarGoal.m  posicionarResult.m  siguientePosicionRequest.m  siguientePosicionResponse.m
src/matlab_msg_gen/glnxa64/src/hexapod_interfaces/msg/: Objeto.msg
src/matlab_msg_gen/glnxa64/src/hexapod_interfaces/src/: hexapod_interfaces_Activar_service.cpp  hexapod_interfaces_Calcular_action.cpp  hexapod_interfaces_CapturarImagen_service.cpp  hexapod_interfaces_EnviarPaso_action.cpp  hexapod_interfaces_Objeto_message.cpp  hexapod_interfaces_ObtenerObjetos_service.cpp  hexapod_interfaces_ObtenerPoseRobot_service.cpp  hexapod_interfaces_Posicionar_action.cpp  hexapod_interfaces_SiguientePosicion_service.cpp
src/matlab_msg_gen/glnxa64/src/hexapod_interfaces/srv/: CapturarImagen.srv  ObtenerObjetos.srv
src/matlab_msg_gen/glnxa64/src/vision_node/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
src/matlab_msg_gen/glnxa64/src/vision_node/include/vision_node/: visibility_control.h
src/matlab_msg_gen/glnxa64/src/vision_node/m/+ros/+internal/+ros2/+custommessages/+vision_node/: mapaDatos.m
src/matlab_msg_gen/glnxa64/src/vision_node/src/: vision_node_MapaDatos_message.cpp
src/transformation_node/transformation_node/: transformation_node.py
src/vision_node/: package.xml  setup.py
src/vision_node/msg/: MapaDatos.msg
src/vision_node/vision_node/: vision_node.py
